# swagger.json
@@ -6,32 +6,79 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"AuthClient": {
+			"Tokens": {
+				"properties": {
+					"accessToken": {
+						"type": "string"
+					},
+					"refreshToken": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"accessToken",
+					"refreshToken"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_Profile.Exclude_keyofProfile.salt-or-password__": {
 				"properties": {
 					"id": {
 						"type": "string"
 					},
-					"login": {
+					"username": {
 						"type": "string"
 					},
 					"name": {
+						"type": "string"
+					},
+					"email": {
 						"type": "string"
 					}
 				},
 				"required": [
 					"id",
-					"login",
+					"username",
 					"name"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Profile.salt-or-password_": {
+				"$ref": "#/components/schemas/Pick_Profile.Exclude_keyofProfile.salt-or-password__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"ProfileDto": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"tokens": {
+						"$ref": "#/components/schemas/Tokens"
+					}
+				},
+				"required": [
+					"id",
+					"username",
+					"name",
+					"tokens"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AuthResponse": {
-				"$ref": "#/components/schemas/AuthClient"
-			},
-			"RegistrationRequest": {
+			"CreateProfileDto": {
 				"properties": {
-					"login": {
+					"username": {
 						"type": "string"
 					},
 					"password": {
@@ -39,19 +86,22 @@
 					},
 					"name": {
 						"type": "string"
+					},
+					"email": {
+						"type": "string"
 					}
 				},
 				"required": [
-					"login",
+					"username",
 					"password",
 					"name"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AuthRequest": {
+			"AuthDto": {
 				"properties": {
-					"login": {
+					"username": {
 						"type": "string"
 					},
 					"password": {
@@ -59,7 +109,7 @@
 					}
 				},
 				"required": [
-					"login",
+					"username",
 					"password"
 				],
 				"type": "object",
@@ -154,16 +204,16 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/api/auth/registration": {
+		"/api/auth/signUp": {
 			"post": {
-				"operationId": "Registration",
+				"operationId": "SignUp",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/AuthResponse"
+									"$ref": "#/components/schemas/ProfileDto"
 								}
 							}
 						}
@@ -179,23 +229,23 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/RegistrationRequest"
+								"$ref": "#/components/schemas/CreateProfileDto"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/api/auth/login": {
+		"/api/auth/signIn": {
 			"post": {
-				"operationId": "Login",
+				"operationId": "SignIn",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/AuthResponse"
+									"$ref": "#/components/schemas/ProfileDto"
 								}
 							}
 						}
@@ -211,11 +261,59 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/AuthRequest"
+								"$ref": "#/components/schemas/AuthDto"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/api/auth/logout": {
+			"post": {
+				"operationId": "Logout",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authorization"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/auth/refresh": {
+			"get": {
+				"operationId": "Refresh",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Tokens"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authorization"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/wireguard/start": {
